[project]
name = "qb-ptmap"
version = "0.1.1"
description = "Automatic port mapper for qBittorrent with the Proton WireGuard configuration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qbittorrent-api>=2025.7.0",
]

[project.urls]
Repository = "https://github.com/SimoneFelici/qb-ptmap"

[project.scripts]
qb-ptmap = "qb_ptmap.qb_ptmap:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
